--- a/blog/blogapp/templates/blogapp/index.html
+++ b/blog/blogapp/templates/blogapp/index.html
@@ -118,6 +118,13 @@
 								<div class="overlay"></div>
 						<!--		<img class="img-fluid w-100" src="/static/img/category/c1.jpg" alt="">-->
 								<img class="img-fluid w-100" src="/static/img/category/h1.jpg" alt="">
+						<!-- тенировался потестам -->
+								{% if item.has_image %}
+									Есть картинка
+									{% else %}
+									Нет картинки
+								{% endif %}
+								{{ item.has_image }}
 								<a href="/static/img/category/c1.jpg" class="img-pop-up" target="_blank">
 									<div class="deal-details">
 										<h6 class="deal-title">Sneaker for Sports</h6>
