--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -52,9 +52,9 @@
                     <!--Меню-->
                     <ul class="nav navbar-nav menu_nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="category">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="tovar-list">Проба</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact">Letter</a></li>
+                        <li class="nav-item"><a class="nav-link" href="paginator">Paginator</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="admin">admin</a></li>
