--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,7 +5,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="/static/img/fav.png">
+    <link rel="shortcut icon" href="img/fav.png">
     <!-- Author Meta -->
     <meta name="author" content="CodePixar">
     <!-- Meta Description -->
@@ -17,8 +17,8 @@
     <!-- Site Title -->
     <title>{% block title %}{% endblock %}</title>
 
-    <!--========================= CSS ============================================= -->
-    <link rel="stylesheet" href="/static/css/linearicons.css">   <!--дописал static-->
+    <!-- ==========  CSS  ============================================= -->
+    <link rel="stylesheet" href="/static/css/linearicons.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/themify-icons.css">
     <link rel="stylesheet" href="/static/css/bootstrap.css">
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg navbar-light main_box">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href="index.html"><img src="/static/img/logo.png" alt=""></a>
+                <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="icon-bar"></span>
@@ -48,18 +48,14 @@
                 </button>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-
-                    <!--Меню-->
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="tovar-list">Проба</a></li>
                         <li class="nav-item"><a class="nav-link" href="paginator">Paginator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="admin">admin</a></li>
+                        <li class="nav-item"><a class="nav-link" href="optimization">Optimization</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                     </ul>
-
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
                         <li class="nav-item">
@@ -92,7 +88,8 @@
                 <div class="single-footer-widget">
                     <h6>About Us</h6>
                     <p>
-                        Ivan Weis
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
+                        magna aliqua.
                     </p>
                 </div>
             </div>
@@ -129,14 +126,14 @@
                 <div class="single-footer-widget mail-chimp">
                     <h6 class="mb-20">Instragram Feed</h6>
                     <ul class="instafeed d-flex flex-wrap">
-                        <li><img src="/static/img/i1.jpg" alt=""></li>
-                        <li><img src="/static/img/i2.jpg" alt=""></li>
-                        <li><img src="/static/img/i3.jpg" alt=""></li>
-                        <li><img src="/static/img/i4.jpg" alt=""></li>
-                        <li><img src="/static/img/i5.jpg" alt=""></li>
-                        <li><img src="/static/img/i6.jpg" alt=""></li>
-                        <li><img src="/static/img/i7.jpg" alt=""></li>
-                        <li><img src="/static/img/i8.jpg" alt=""></li>
+                        <li><img src="img/i1.jpg" alt=""></li>
+                        <li><img src="img/i2.jpg" alt=""></li>
+                        <li><img src="img/i3.jpg" alt=""></li>
+                        <li><img src="img/i4.jpg" alt=""></li>
+                        <li><img src="img/i5.jpg" alt=""></li>
+                        <li><img src="img/i6.jpg" alt=""></li>
+                        <li><img src="img/i7.jpg" alt=""></li>
+                        <li><img src="img/i8.jpg" alt=""></li>
                     </ul>
                 </div>
             </div>
@@ -163,7 +160,7 @@
 </footer>
 <!-- End footer Area -->
 
-<script src="/static/js/vendor/jquery-2.2.4.min.js"></script> <!--дописал static-->
+<script src="/static/js/vendor/jquery-2.2.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
 <script src="/static/js/vendor/bootstrap.min.js"></script>
