--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -49,12 +49,13 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                     <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
-                        <li class="nav-item"><a class="nav-link" href="tovar-list">Проба</a></li>
-                        <li class="nav-item"><a class="nav-link" href="paginator">Paginator</a></li>
-                        <li class="nav-item"><a class="nav-link" href="optimization">Optimization</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/tovar-list/2/">Проба</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/api/">API</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/paginator/">Paginator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/optimization/">Optimization</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
