--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -52,7 +52,8 @@
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tovar-list/2/">Проба</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/api/">API</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/">API_list</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/1/">API_Detail</a></li>
                         <li class="nav-item"><a class="nav-link" href="/paginator/">Paginator</a></li>
                         <li class="nav-item"><a class="nav-link" href="/optimization/">Optimization</a></li>
                         <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
