--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -52,8 +52,10 @@
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="/tovar-list/2/">Проба</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/users/">API_list</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/users/1/">API_Detail</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/">API_list(User)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/1/">API_Detail(User)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/tovars/">API_list(Tovar)</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/tovars/1/">API_Detail(Tovar)</a></li>
                         <li class="nav-item"><a class="nav-link" href="/paginator/">Paginator</a></li>
                         <li class="nav-item"><a class="nav-link" href="/optimization/">Optimization</a></li>
                         <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
